--- a/index.html
+++ b/index.html
@@ -17,18 +17,18 @@
             <h1>IND</h1>
             <!-- 6 score div -->
             <div class="balls" id="team-1-superover">
-                <div class="ball">2</div>
-                <div class="ball">4</div>
-                <div class="ball">3</div>
-                <div class="ball">6</div>
-                <div class="ball">6</div>
-                <div class="ball">6</div>
+                <div class="ball"></div>
+                <div class="ball"></div>
+                <div class="ball"></div>
+                <div class="ball"></div>
+                <div class="ball"></div>
+                <div class="ball"></div>
             </div>
             <!-- Score tracker -->
             <div class="scoreboard">
-                <span id="score-team1">21</span>
+                <span id="score-team1"></span>
                 <span>/</span>
-                <span id="wicket-team1">0</span>
+                <span id="wicket-team1"></span>
             </div>
         </div>
         
@@ -40,17 +40,17 @@
             <h1>PAK</h1>
             <!-- 6 score div -->
             <div class="balls" id="team-2-super-over">
-                <div class="ball">W</div>
-                <div class="ball">W</div>
-                <div class="ball">W</div>
-                <div class="ball">0</div>
-                <div class="ball">0</div>
-                <div class="ball">0</div>
+                <div class="ball"></div>
+                <div class="ball"></div>
+                <div class="ball"></div>
+                <div class="ball"></div>
+                <div class="ball"></div>
+                <div class="ball"></div>
             </div>
             <div class="scoreboard">
-                <span id="score-team2">0</span>
+                <span id="score-team2"></span>
                 <span>/</span>
-                <span id="wicket-team2">3</span>
+                <span id="wicket-team2"></span>
             </div>
         </div>
     </section>
@@ -63,4 +63,7 @@
         <img src=" https://s3.ap-south-1.amazonaws.com/kalvi-education.github.io/front-end-web-development/so-reset-button.png" alt="" class="button" id="reset">
     </section>
 </body>
+
+<script src="app.js"></script>
+
 </html>
