--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
             </div>
             <!-- Score tracker -->
             <div class="scoreboard">
-                <span id="score-team1"></span>
+                <span id="score-team1">0</span>
                 <span>/</span>
-                <span id="wicket-team1"></span>
+                <span id="wicket-team1">0</span>
             </div>
         </div>
         
@@ -48,9 +48,9 @@
                 <div class="ball"></div>
             </div>
             <div class="scoreboard">
-                <span id="score-team2"></span>
+                <span id="score-team2">0</span>
                 <span>/</span>
-                <span id="wicket-team2"></span>
+                <span id="wicket-team2">0</span>
             </div>
         </div>
     </section>
